Fix bug: navbar transparent when collapsed area show.

--- a/style/less/ediary.less
+++ b/style/less/ediary.less
@@ -29,6 +29,12 @@ a, a:hover {
   font-weight: bold;
 }
 
+/// Fix bug: navbar transparent when collapsed area show.
+.nav-collapse {
+  z-index: 99;
+  background-color: #fdfdfd;
+}
+
 #page .article-header h2 {
   margin: 0;
 }
